PortalPackage/ Enrollment Rx Core/objects/Enrollment_Opportunity__c.object
<CustomObject>
    <description>ERx Custom Object</description>
    <fields>
        <fullName>ACT_Date_Test_Taken__c</fullName>
        <description>ERx Custom Field</description>
        <label>ACT Date Test Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_Test_Score__c</fullName>
        <description>ERx Custom Field</description>
        <label>ACT Test Score</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Start Date</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipName>R00N80000002yYv9EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Barriers__c</fullName>
        <description>ERx Custom Field</description>
        <label>Additional Barriers</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Admissions_Confidence__c</fullName>
        <description>ERx Custom Field</description>
        <label>Admissions Confidence</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admissions_Status_Text__c</fullName>
        <description>Hidden, auto-populated field that contains the text value of the Admissions Status picklist. Used to get around the SFDC limitation on formula fields referencing picklist text values.</description>
        <inlineHelpText>Hidden, auto-populated field that contains the text value of the Admissions Status picklist. Used to get around the SFDC limitation on formula fields referencing picklist text values.</inlineHelpText>
        <label>Admissions Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admissions_Status__c</fullName>
        <description>ERx Custom Field</description>
        <label>Admissions Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Attempted Contact</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Complete</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Scheduled</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Interview No-Show</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Complete</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Application Complete</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Accepted</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Active Student</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (File Closed)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_First_Name__c</fullName>
        <description>Hidden field to hold applicant first name, used in custom buttons / formulas that can&apos;t reach through the Applicant relationship.</description>
        <formula>Applicant__r.FirstName</formula>
        <inlineHelpText>Hidden field to hold applicant first name, used in custom buttons / formulas that can&apos;t reach through the Applicant relationship.</inlineHelpText>
        <label>Applicant First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Last_Name__c</fullName>
        <description>Hidden field to hold applicant last name, used in custom buttons / formulas that can&apos;t reach through the Applicant relationship.</description>
        <formula>Applicant__r.LastName</formula>
        <inlineHelpText>Hidden field to hold applicant last name, used in custom buttons / formulas that can&apos;t reach through the Applicant relationship.</inlineHelpText>
        <label>Applicant Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx custom field</description>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Complete_Age__c</fullName>
        <formula>IF(ISPICKVAL(Admissions_Status__c, &quot;Application Complete&quot;), ROUND(NOW()-  Status_Modified_Date__c  , 0), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Complete Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Payment__c</fullName>
        <description>ERx Custom Field</description>
        <label>Application Fee Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Online Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailed Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Fee Waiver Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailed Fee Waiver Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apply_For_Merit_Based_Scholarship__c</fullName>
        <description>ERx Custom Field</description>
        <inlineHelpText>Do You Plan To Apply For Merit-Based Scholarships?</inlineHelpText>
        <label>Apply For Merit Based Scholarship?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approximate_Annual_Compensation__c</fullName>
        <label>Approximate Annual Compensation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_Financial_Aid_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <inlineHelpText>Financial Aid Advisor assigned</inlineHelpText>
        <label>Assigned Financial Aid User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award_Amount__c</fullName>
        <label>Award Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <picklist>
            <picklistValues>
                <fullName>U.S. Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual U.S. Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Permanent Resident visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Citizenship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_File_Disposition__c</fullName>
        <description>ERx Custom Field</description>
        <label>Closed File Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Reopen File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busy Signal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment in Another School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Qualify Academically</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Program of Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in Different Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>College_University_Attended_2nd__c</fullName>
        <label>College/University Attended (2nd)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_University_Attended__c</fullName>
        <label>College/University Attended</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committee_Person_1__c</fullName>
        <label>Committee Person 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <formula>Applicant__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_Age__c</fullName>
        <formula>ROUND(NOW()- Status_Modified_Date__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curriculum__c</fullName>
        <label>Curriculum</label>
        <picklist>
            <picklistValues>
                <fullName>Algebra 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Languages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Comments__c</fullName>
        <label>Decision Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Rating__c</fullName>
        <label>Decision Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_of_Military__c</fullName>
        <label>Division of Military</label>
        <picklist>
            <picklistValues>
                <fullName>Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Guard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_You_Plan_to_Apply_For_Financial_Aid__c</fullName>
        <label>Do You Plan To Apply For Financial Aid</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Complete__c</fullName>
        <description>Auto-calculated field showing total percentage of required Document records that have been approved.</description>
        <formula>IF(Documents_Required_Total__c = 0, 0, Documents_Approved_Total__c / Documents_Required_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated field showing total percentage of required Document records that have been approved.</inlineHelpText>
        <label>Document % Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Documents_Approved_Admissions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Auto-calculated field showing total number of approved Admissions Document records for this EO.</description>
        <inlineHelpText>Auto-calculated field showing total number of approved Admissions Document records for this EO.</inlineHelpText>
        <label>Documents Approved (Admissions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents_Approved_Financial_Aid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Auto-calculated field showing total number of approved Financial Aid Document records for this EO.</description>
        <inlineHelpText>Auto-calculated field showing total number of approved Financial Aid Document records for this EO.</inlineHelpText>
        <label>Documents Approved (Financial Aid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents_Approved_Total__c</fullName>
        <description>Auto-calculated field showing total number of approved Document records (Admissions + Financial Aid) for this EO.</description>
        <formula>Documents_Approved_Admissions__c + Documents_Approved_Financial_Aid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated field showing total number of approved Document records (Admissions + Financial Aid) for this EO.</inlineHelpText>
        <label>Documents Approved (Total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field which tracks whether document records have been auto-created for this Enrollment Opportunity. Required by the system because Enrollment Opportunities can only have document records auto-created once.</description>
        <inlineHelpText>A hidden field which tracks whether document records have been auto-created for this Enrollment Opportunity. Required by the system because Enrollment Opportunities can only have document records auto-created once.</inlineHelpText>
        <label>Documents Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Required_Admissions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Auto-calculated field showing total number of Admissions Document records for this EO (whether approved or not).</description>
        <inlineHelpText>Auto-calculated field showing total number of Admissions Document records for this EO (whether approved or not).</inlineHelpText>
        <label>Documents Required (Admissions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents_Required_Financial_Aid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Auto-calculated field showing total number of FA Document records for this EO (whether approved or not).</description>
        <inlineHelpText>Auto-calculated field showing total number of FA Document records for this EO (whether approved or not).</inlineHelpText>
        <label>Documents Required (Financial Aid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents_Required_Total__c</fullName>
        <description>Auto-calculated field showing total number of required Document records (Admissions + Financial Aid) for this EO (whether approved or not).</description>
        <formula>Documents_Required_Admissions__c + Documents_Required_Financial_Aid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated field showing total number of required Document records (Admissions + Financial Aid) for this EO (whether approved or not).</inlineHelpText>
        <label>Documents Required (Total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Applicant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>S&amp;P 500 List</description>
        <label>Employer</label>
        <picklist>
            <picklistValues>
                <fullName>3M Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abbott Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abercrombie &amp; Fitch Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adobe Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Micro Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aetna Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliated Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFLAC Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agilent Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akamai Technologies Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK Steel Holding Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegheny Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegheny Technologies Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergan Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allied Waste Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allstate Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altera Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altria Group Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameren Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Capital Strategies Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Electric Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Int&apos;l. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Tower Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameriprise Financial Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmerisourceBergen Corp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Accepted_Age__c</fullName>
        <formula>IF(ISPICKVAL(Admissions_Status__c, &quot;Enrollment Accepted&quot;), ROUND(NOW()- Status_Modified_Date__c  , 0), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Accepted Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Essay_Comments__c</fullName>
        <label>Essay Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Stage__c</fullName>
        <description>ERx Custom Field</description>
        <label>Financial Aid Stage</label>
        <picklist>
            <picklistValues>
                <fullName>FA Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA Interview Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA Interview Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GMAT_Date_Taken__c</fullName>
        <label>GMAT Date Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GMAT_Scheduled_Date__c</fullName>
        <label>GMAT Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GMAT_Status__c</fullName>
        <label>GMAT Status</label>
        <picklist>
            <picklistValues>
                <fullName>GMAT is waived based upon my earned graduate degree.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMATis waived based upon my years of professional work experience.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT is required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduated_High_School_Name__c</fullName>
        <label>Graduated High School Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>Some Highschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College (&lt; 2 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College (&lt; 4 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <description>ERx Custom Field</description>
        <label>How Did You Hear About Us?</label>
        <picklist>
            <picklistValues>
                <fullName>&quot;Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highschool Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intend_to_Earn_a_Degree__c</fullName>
        <description>ERx Custom Field</description>
        <inlineHelpText>Do You Intend to Earn a Degree?</inlineHelpText>
        <label>Intend to Earn a Degree?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intend_to_be_a_Full_Time_Student__c</fullName>
        <description>ERx Custom Field</description>
        <inlineHelpText>Do you intend to be a Full-Time Student?</inlineHelpText>
        <label>Intend to be a Full-Time Student?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intend_to_live_in_College_Housing__c</fullName>
        <description>ERx Custom Field</description>
        <inlineHelpText>Do you intend to live in College Housing?</inlineHelpText>
        <label>Intend to live in College Housing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interview_Complete_Age__c</fullName>
        <formula>IF(ISPICKVAL(Admissions_Status__c, &quot;Interview Complete&quot;), ROUND(NOW()-  Status_Modified_Date__c  , 0), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interview Complete Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_Scheduled_Age__c</fullName>
        <formula>IF(ISPICKVAL(Admissions_Status__c, &quot;Interview Scheduled&quot;), ROUND(NOW()-  Status_Modified_Date__c  , 0), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interview Scheduled Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <description>ERx Custom Field</description>
        <label>Maiden Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx  Custom Field</description>
        <label>Marketing Initiative</label>
        <referenceTo>Marketing_Initiatives__c</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Military_Status__c</fullName>
        <inlineHelpText>Are you or your spouse Active Duty, Reserves or Veteran of the U.S. Military?</inlineHelpText>
        <label>Military Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>